# gis-utils-public

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  environment-lock.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: cd-python.yml  ci-python.yml
docs/conventions/: README.md  logging.md  python-convention.md
notebooks/: .env.example  .env.template  demo_agol_add_users_to_group.ipynb  demo_upload_module_to_agol.ipynb  setup_geospatial_gpu_uv.ipynb
src/gis_utils_public/: __init__.py  main.py  yaml_config.py
src/gis_utils_public/arcgis_utils/: __init__.py  agol_user_admin.py  arcgis_checks.py  arcgispro_layer_utils.py  arcgispro_map_utils .py  arcgispro_map_utils.py  arcgispro_project_utils.py  field_utils.py  sde_utils.py  yaml_config_arcgis.py
src/mdir_arcpy_utils_public/: __init__.py  hello.py
