[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gis-utils-public"
version = "0.0.3"
description = "GIS utilities for the Norwegian Environment Agency"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
  { name = "Miljodirektoratet" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest==7.4.3",
  "ruff==0.6.4",
  "python-dotenv==1.2.2",
  # Azure dependencies
  "azure-common==1.1.28",
  "azure-core==1.35.1",
  "azure-keyvault==4.2.0",
  "azure-keyvault-certificates==4.10.0",
  "azure-keyvault-keys==4.11.0",
  "azure-keyvault-secrets==4.10.0",
  "azure-mgmt-core==1.6.0",
  "azure-mgmt-storage==23.0.1",
  "isodate==0.7.2",
  # Database dependencies
  "psycopg2==2.9.10",
  "pymssql==2.3.7",
]

[project.scripts]
gis-utils-public = "gis_utils_public.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
