[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gis-utils-public"
dynamic = ["version"]
description = "GIS utilities for the Norwegian Environment Agency"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
  { name = "Miljodirektoratet" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
    # "gdal>=3.12.2",
    "rasterio>=1.4.4",
]

# Optional dependencies
# Install all: uv sync --all-extras
# Install specific: uv sync --extra dev or uv sync --extra pytorch
[project.optional-dependencies]
dev = [
  "pytest==7.4.3",
  "ruff==0.6.4",
  "ipykernel==6.29.5",
  "python-dotenv==1.2.2",
  # Azure dependencies
  "azure-common==1.1.28",
  "azure-core==1.35.1",
  "azure-keyvault==4.2.0",
  "azure-keyvault-certificates==4.10.0",
  "azure-keyvault-keys==4.11.0",
  "azure-keyvault-secrets==4.10.0",
  "azure-mgmt-core==1.6.0",
  "azure-mgmt-storage==23.0.1",
  "isodate==0.7.2",
  # Database dependencies
  "psycopg2==2.9.10",
  "pymssql==2.3.7",
]
pytorch = [
  "cupy-cuda12x>=14.0.1",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "torchaudio>=2.0.0",
  "thor-terratorch-ext",
]

[project.scripts]
gis-utils-public = "gis_utils_public.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
tag_regex = "^v?(?P<version>\\d+\\.\\d+\\.\\d+)$"
fallback_version = "0.0.6"

# UV package indexes and sources for geospatial and PyTorch
[tool.uv.sources]
gdal = [
  { index = "gdal-wheels", marker = "sys_platform == 'linux'" },
  { index = "geospatial_wheels", marker = "sys_platform == 'win32'" },
]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
thor-terratorch-ext = { git = "https://github.com/FM4CS/thor_terratorch_ext.git" }

[[tool.uv.index]]
name = "geospatial_wheels"
url = "https://nathanjmcdougall.github.io/geospatial-wheels-index/"
explicit = true

[[tool.uv.index]]
name = "gdal-wheels"
url = "https://gitlab.com/api/v4/projects/61637378/packages/pypi/simple"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# RUFF Rules
[tool.ruff]
exclude = [
    "tmp",
]

line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E4",    # pycodestyle: indentation errors
    "E7",    # pycodestyle: statements and control flow
    "E9",    # pycodestyle: runtime errors
    "F",     # pyflakes: code correctness
    "B",     # flake8-bugbear: likely bugs and design problems
    "ERA",   # eradicate: commented-out code
    "D",     # pydocstyle: docstring conventions
    "N"      # pep8-naming: naming conventions
]

ignore = [
    "D107",   # pydocstyle: Missing docstring in __init__
    "D213",   # pydocstyle: Multi-line summary should start at the second line
    "E501",   # pycodestyle: Line too long
    "F401",   # pyflakes: Module imported but unused
    "D417",   # pydocstyle: Missing argument descriptions in docstrings
    "ERA001"  # eradicate: Commented out code
]

unfixable = [
    "B"   # flake8-bugbear
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E", "D"]
"tests/*.py" = ["D"]
"**/*.ipynb" = ["D"]
"scripts/*.py" = ["D"]

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

